# VIDEO-TEXT---BLOG-WORKFLOW_DESKTOP

./: .gitignore  AGENTS.md  CLAUDE.md  DECOUPLE.md  DESIGN.md  GUIDE.md  LICENSE  Makefile  PM OS 的系统运作框架.md  README.md  STYLE.md  WORKFLOW.md  pyproject.toml  requirements.txt  transcribe.py  video2blog.py  使用说明.md  视频博文工作流-PM_OS架构版.md  视频博文工作流-架构版.md  视频自动化工作流方案.md  项目结构.md
.github/workflows/: ci.yml
Archive/: PM OS 的系统运作框架.md  视频博文工作流-架构版.md  视频自动化工作流方案.md
Archive/docs-old/: 使用说明.md  项目结构.md
Context/: CONFIG.md  HISTORY.md  PREFERENCES.md
Context/Work/: README.md
Knowledge/: ROUTER.md
Knowledge/Prompts/: zh-cn-mix.md
Knowledge/Structures/: pyramid.md
Knowledge/Styles/: casual-blog.md  tutorial.md
docs/: GUIDE.md  产品总览.md  产品设计讨论清单.md  体验架构优化.md  桌面端方案.md  系统架构.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  sidecar.rs
knowledge/: ROUTER.md  STYLE_GUIDE.md  工作流契约.md
knowledge/Examples/: README.md
knowledge/Prompts/: zh-cn-mix.md
knowledge/Structures/: debate.md  scqa.md
knowledge/Styles/: deep-dive.md
memory/: CONFIG.md  HISTORY.md  PREFERENCES.md  fingerprints.jsonl
output/: README.md
output/Reviews/: 2026-05-15-ai-era-pm-survival-guide.review.md  2026-05-16-ai-era-designer-turning-point.review.md  2026-05-19-AI让你更像你.review.md  2026-05-19-reading-with-question-awareness.review.md  2026-05-19-rebuild-the-authors-logic.review.md  2026-05-19-what-we-learn-when-learning.review.md
scripts/: build_backend_bin.sh  bundle_contracts.sh  bundle_ffmpeg.sh  bundle_whisper_cpp.sh  migrate_post_frontmatter.py  notarize_app.sh  package_signed_dmg.sh  regression.py  run_app.sh  run_engine_prototype.py  run_engine_server.py  sign_app.sh  update_fingerprint.py  validate_workflow.py
tests/: __init__.py  test_asr_mlx.py  test_asr_whisper_cpp.py  test_engine.py  test_meta.py  test_normalize.py  test_outline_parser.py  test_regression.py  test_routes_decouple.py  test_secrets_store.py  test_server_api.py  test_server_core.py  test_workflow_scripts.py
video2blog/: __init__.py  app_bootstrap.py  media.py  output.py  pipeline.py  server.py  server_core.py  transcript.py  utils.py
video2blog/asr/: __init__.py  external.py  mlx.py  whisper_cpp.py
video2blog/cli/: __init__.py  main.py
video2blog/engine/: __init__.py  chunking.py  client.py  outline.py  parser.py  parsing.py  runner.py  secrets_store.py  utils.py  whisper_assets.py
video2blog/repos/: __init__.py  post_repo.py  task_repo.py
video2blog/routes/: __init__.py  feedback.py  files.py  health.py  home.py  jobs.py  knowledge.py  llm_profiles.py  local_models.py  maintenance.py  models.py  posts.py  sources.py  tasks.py  trash.py  voice.py
video2blog/watch/: __init__.py
work/1.1 学习“学习”时，我们学什么？/: clean.md  meta.json  raw.srt  raw.txt
work/AI 让你更像你 - 一人公司的引力与智能时代的极端放大器 - Indigo Talk EP48/: clean.md  meta.json  raw.srt  raw.txt
work/Transcripts/: 01 你的阅读是别人的写作.meta.json  02 重建作者的逻辑.srt  02 重建作者的逻辑.txt  03 回答不难 难的是提问.meta.json  03 回答不难 难的是提问.srt  03 回答不难 难的是提问.txt  DM_20260515155830_001.meta.json  yao-shunyu-anthropic-gemini-source-notes.md  知道什么是好的，比能写出好的更难  Agent 时代的程序员、组织与判断力危机 - Indigo Talk EP47.meta.json
work/asr/: 1.问题意识是什么.meta.json  1.问题意识是什么.srt  1.问题意识是什么.txt  2.1问题意识之如何阅读联邦党人文集.meta.json  2.1问题意识之如何阅读联邦党人文集.srt  3.1问题意识-阅读部分.srt  4.1问题意识-职场.meta.json  4.1问题意识-职场.srt  5.1问题意识-个人成长.srt  6.1问题意识-社交.txt  BnL5qaBzmR0.srt  BnL5qaBzmR0.txt  问题意识-引入.txt  (+5 more)
(+158 files in other folders)
