[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video2blog"
version = "0.1.0"
description = "Video / transcript to blog workflow. Step 1–2 CLI handles ASR; Step 3–8 is driven by an Agent."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Liang Peng", email = "sorcereradair@gmail.com" }]
keywords = ["whisper", "asr", "video", "transcript", "blog", "workflow"]
dependencies = [
  "watchdog>=4.0.0",
  "PyYAML>=6.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  # mlx-whisper 仅在 Apple Silicon macOS 上可用；其他平台请改用 whisper.cpp 引擎。
  "mlx-whisper>=0.4.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[project.scripts]
video2blog = "video2blog.cli.main:main"

[project.urls]
Repository = "https://github.com/sorcererair/video-text-blog-workflow"

[tool.setuptools.packages.find]
include = ["video2blog*"]
exclude = ["Archive*", "tests*", "scripts*", "work*", "output*", "input*", "knowledge*", "memory*"]
