[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video2blog"
version = "0.1.0"
description = "Video / transcript to blog workflow. Step 1–2 CLI handles ASR; Step 3–8 is driven by an Agent."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Liang Peng", email = "sorcereradair@gmail.com" }]
keywords = ["whisper", "asr", "video", "transcript", "blog", "workflow"]
dependencies = [
  "watchdog>=4.0.0",
  "PyYAML>=6.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  # LLM API Key 安全存储：经系统钥匙串（macOS Keychain）读写，避免明文落盘。
  "keyring>=24",
  # mlx-whisper 仅在 Apple Silicon macOS 上可用；其他平台请改用 whisper.cpp 引擎。
  "mlx-whisper>=0.4.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[project.optional-dependencies]
# 开发期工具链（不随运行时分发）：`pip install -e ".[dev]"` 安装。
# httpx 是 fastapi.testclient.TestClient 的硬依赖（测试用）：macOS 上由 mlx-whisper
# 依赖链顺带装入，但 Linux CI 跳过 mlx-whisper，故必须显式声明，否则测试导入即失败。
dev = ["ruff>=0.6", "httpx>=0.27"]

[project.scripts]
video2blog = "video2blog.cli.main:main"

[project.urls]
Repository = "https://github.com/sorcererair/video-text-blog-workflow"

[tool.setuptools.packages.find]
include = ["video2blog*"]
exclude = ["Archive*", "tests*", "scripts*", "work*", "output*", "input*", "knowledge*", "memory*"]

# ── 静态检查 / 格式化（ruff，lint + format 二合一）──
[tool.ruff]
line-length = 100
target-version = "py310"
# 非源码目录不参与检查（数据 / 归档 / 虚拟环境 / 构建产物）。
extend-exclude = [
  "Archive",
  "work",
  "output",
  "input",
  "knowledge",
  ".venv",
  ".build-backend",
  "video2blog.egg-info",
]

[tool.ruff.lint]
# E/W=pycodestyle，F=pyflakes，I=isort，UP=pyupgrade，B=bugbear。
select = ["E", "F", "I", "W", "UP", "B"]
# 行宽交给 formatter 尽力处理；本项目中文注释多，不强制断行（否则可读性受损）。
ignore = ["E501"]
