[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
# 记住窗口位置/尺寸（macOS 期望 App 关闭再开恢复窗口 frame）
tauri-plugin-window-state = "2"
# 后台时把任务状态提醒送进 macOS 系统通知中心（可点击唤回窗口）
tauri-plugin-notification = "2"
# sidecar 启动/握手错误的统一类型
anyhow = "1"
